<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_dashboard"
        android:textSize="24sp"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnViewAllAppointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_appointments"
        android:layout_marginTop="160dp" />
    <Button
        android:id="@+id/btnPrescribeMedicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prescribe_medicine"
        android:layout_marginTop="20dp" />
    <Button
        android:id="@+id/logoutDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="20dp" />


</LinearLayout>
