<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/doctorDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_doctor" />

    <EditText
        android:id="@+id/appointmentDetailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/appointment_details"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/saveAppointmentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_appointment"
        android:layout_marginTop="16dp" />

    <ListView
        android:id="@+id/appointmentListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" />

</LinearLayout>
